--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -23,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1",
     "mongoose-aggregate-paginate": "^2.0.2",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.10"
   }
 }
