--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1",
     "mongoose-aggregate-paginate": "^2.0.2",
+    "mongoose-aggregate-paginate-v2": "^1.1.4",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10"
   }
